# Wonterfact

./: .gitignore  README.md  pyproject.toml
jupyter/: skellam-snmf-experiments.ipynb
tests/: test_cupy_utils.py  test_examples.py  test_model_check.py  test_nodes.py  test_utils.py  utils.py
wonterfact/: __init__.py  buds.py  core_nodes.py  cupy_utils.py  glob_var_manager.py  graphviz.py  leaves.py  observers.py  operators.py  root.py  utils.py
wonterfact/examples/: conv_nmf.py  nmf.py  snmf.py
